update my status

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>酷Q状态</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  <title>SaintIC Status Page</title>
+  <link href="favicon.png" rel="icon" type="image/x-icon" />
+  <link href="favicon.png" rel="shortcut icon" type="image/x-icon" />
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <style>
   .footer {
@@ -99,8 +100,7 @@
           </div>
           <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-              <li><a href="https://cqp.cc/forum.php">社区</a></li>
-              <li><a href="https://cqp.cc/b/app">应用</a></li>
+              <li><a href="https://www.saintic.com">主站</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             </ul>
