--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>SaintIC Status Page</title>
+  <title>Status Page</title>
   <link href="favicon.png" rel="icon" type="image/x-icon" />
   <link href="favicon.png" rel="shortcut icon" type="image/x-icon" />
   <link href="css/bootstrap.min.css" rel="stylesheet">
+  <script src="js/config.js" type="text/javascript"></script>
   <style>
   .footer {
     text-align: center;
@@ -96,11 +97,11 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="./">酷Q状态</a>
+            <a class="navbar-brand" href="./"><script>document.write(__siteName);</script> Status</a>
           </div>
           <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-              <li><a href="https://www.saintic.com">主站</a></li>
+               <!--<li><a href="https://www.saintic.com">主站</a></li>-->
             </ul>
             <ul class="nav navbar-nav navbar-right">
             </ul>
@@ -113,10 +114,10 @@
     <div class="row">
       <div class="col-lg-10 col-lg-offset-1">
         <div id="stattip-err" class="alert alert-warning hide" role="alert">
-          <b>当前状态：</b>酷Q部分服务发生异常，我们将尽快修复。
+          <b>当前状态：</b><script>document.write(__siteName);</script>部分服务发生异常，我们将尽快修复。
         </div>
         <div id="stattip-ok" class="alert alert-success hide" role="alert">
-          <b>当前状态：</b>酷Q所有服务正常运行中，没有发现异常。
+          <b>当前状态：</b><script>document.write(__siteName);</script>所有服务正常运行中，没有发现异常。
         </div>
         <div id="stattip-load" class="alert alert-info" role="alert">
           <b>当前状态：</b>正在检测运行状态，请稍候..
@@ -164,10 +165,10 @@
   <script src="js/jquery-1.12.4.min.js" type="text/javascript"></script>
   <script src="js/bootstrap.min.js" type="text/javascript"></script>
   <script src="js/mustache.min.js" type="text/javascript"></script>
-  <script src="js/config.js" type="text/javascript"></script>
   <script src="js/cup.js" type="text/javascript"></script>
   <script type="text/javascript">
     jQuery(document).ready(myApp.dashboard.init);
+    document.title = __siteName + " " + document.title;
   </script>
 
 </body>
